Replace deprecated method newInstance